# MacchinaM2-J2534-Rust

./: README.md  macchina.json
.github/workflows/: linux.yml
Driver/: Cargo.toml  README.md  build.bat  build.rs  build.sh  driver.reg  macchina.json
Driver/.cargo/: config
Driver/src/: #lib.rs#  channels.rs  comm.rs  ioctl.rs  lib.rs  lib_tests.rs  logger.rs  passthru_drv.rs
J2534Common/: Cargo.toml  README.md
J2534Common/src/: lib.rs
M2UTD/: macchina.ino
M2_FIRMWARE/: M2_FIRMWARE.ino  can_common.cpp  can_common.h  channel.cpp  channel.h  comm.cpp  comm.h  comm_channel.cpp  comm_channel.h  comm_channel_can.cpp  comm_channel_iso15765.cpp  comm_channels.cpp  comm_channels.h  custom_can.cpp  custom_can.h  due_can.cpp  due_can.h  ioctl.h  j2534_mini.h
