[package]
name = "macchina_driver"
version = "0.1.0"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "macchina_driver"
crate-type = ["cdylib"]

[dependencies]
libc="0.2.0"
J2534Common = { path = "../J2534Common" }