[package]
name = "m2_driver"
version = "0.1.0"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.80"
serialport="3.3.0"
J2534Common = {path="../J2534Common"}

[dev-dependencies]
rand = "0.7.3"

[target.'cfg(windows)'.dependencies]
winreg="0.7.0"
