[package]
name = "J2534Common"
version = "0.1.0"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags="1.2.1"
num = "0.2"
num-traits = "0.2"
num-derive = "0.3.3"
